added removeTodo action

--- a/src/components/TodoItem/TodoItem.module.css
+++ b/src/components/TodoItem/TodoItem.module.css
@@ -1,6 +1,11 @@
 .todoItem {
+    height: 50px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 5px 10px;
     background-color: aliceblue;
+}
+.actionButtons {
+    margin-left: 5px;
 }
