--- a/src/components/TodoItem/TodoItem.module.css
+++ b/src/components/TodoItem/TodoItem.module.css
@@ -1,11 +1,13 @@
 .todoItem {
-    height: 50px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5px 10px;
-    background-color: aliceblue;
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 10px;
+}
+.todoItem:nth-of-type(odd) {
+  background-color: aliceblue;
 }
 .actionButtons {
-    margin-left: 5px;
+  margin-left: 5px;
 }
