--- a/src/components/UserItem/UserItem.module.css
+++ b/src/components/UserItem/UserItem.module.css
@@ -1,4 +1,7 @@
 .item {
-    display: flex;
-    justify-content: space-between;
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 10px;
 }
