--- a/src/components/UserTodos/UserTodos.module.css
+++ b/src/components/UserTodos/UserTodos.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 50%;
-    height: 50%;
+    min-height: 50vh;
     border: 1px solid black;
+    margin-bottom: 20px;
 }
