--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -1,6 +1,7 @@
 .usersWrapper {
     display: flex;
     flex-direction: column;
+    margin-top: 20px;
     height: 100px;
     border: 1px solid black;
     width: 50%;
