--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,12 @@ html, body{
   padding: 0;
   width: 100%;
   height: 100%;
+  min-height: 100%;
 }
 /* just to center main content */
 #root{
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
